(package.json): correct typo in keywords by replacing "Codder Commit" with "Coder Commit"

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "Commit Message",
     "Commit Message Generator",
     "Gen Commit",
+    "Codder Commit",
     "Auto Commit"
   ],
   "publisher": "JaberSaid",
