🎨 (package.json): update keywords for better discoverability and SEO 📦️ (images/logo.png): update logo image to reflect new branding

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gen-commit",
   "displayName": "Gen Commit ✨",
   "description": "Use LLM API to review Git changes, generate conventional commit messages that meet the conventions, simplify the commit process, and keep the commit conventions consistent.",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "engines": {
     "node": ">=16",
     "vscode": "^1.77.0"
@@ -11,18 +11,53 @@
     "Other"
   ],
   "keywords": [
-    "Codder Commit",
     "Gen Commit",
-    "Azure",
-    "OpenAI",
-    "ChatGPT",
-    "GitEmoji",
+    "Coder Commit",
+    "Commit Message Generator",
+    "AI Commit",
+    "Smart Commit",
     "Git Commit",
+    "Commit Message",
+    "Auto Commit",
+    "git",
+    "commit",
+    "message",
+    "OpenAI",
+    "generator",
+    "Llama3",
+    "WizardCoder",
+    "Mistral",
+    "DeepSeek-Coder",
+    "ChatGPT",
+    "Gitmoji",
     "Conventional Commits",
     "Commitizen",
-    "Commit Message",
-    "Commit Message Generator",
-    "Auto Commit"
+    "Multi-language Commit",
+    "VS Code Extension",
+    "Git Workflow",
+    "Commit Automation",
+    "Code Review",
+    "Version Control",
+    "Developer Productivity",
+    "AI-powered Commit",
+    "ai",
+    "openai",
+    "llama",
+    "wizardcoder",
+    "mistral",
+    "deepseek",
+    "gitmoji",
+    "vscode",
+    "extension",
+    "automation",
+    "workflow",
+    "productivity",
+    "code",
+    "version-control",
+    "multi-language",
+    "nlp",
+    "machine-learning",
+    "developer-tools"
   ],
   "publisher": "JaberSaid",
   "repository": "https://github.com/Jaber-Saed/gen-commit",
