fix(config): set default value of EMOJI_ENABLED to false in README and package.json to align with new project guidelines

--- a/package.json
+++ b/package.json
@@ -128,7 +128,7 @@
           "type": "string"
         },
         "gen-commit.EMOJI_ENABLED": {
-          "default": true,
+          "default": false,
           "description": "Enable Emoji",
           "type": "boolean"
         },
